--- a/package.json
+++ b/package.json
@@ -1,26 +1,43 @@
 {
-  "name": "template",
+  "name": "mt_recommender",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.6.1",
+    "npm": "7.20.3"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.57",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "@emotion/react": "11.8.2",
+    "@emotion/styled": "11.8.1",
+    "@mui/base": "^5.0.0-alpha.87",
+    "@mui/icons-material": "5.5.1",
+    "@mui/lab": "5.0.0-alpha.73",
+    "@mui/material": "^5.5.1",
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/user-event": "13.5.0",
+    "axios": "0.26.1",
+    "create-app-react": "1.0.6",
+    "date-fns": "2.28.0",
+    "dot-env": "0.0.1",
+    "env": "0.0.2",
+    "http-proxy-middleware": "2.0.4",
+    "lodash": "4.17.21",
+    "moment": "2.29.1",
+    "node-polyfill-webpack-plugin": "1.1.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "web-vitals": "2.1.4",
+    "xml-js": "1.6.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +56,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "https://songtak.github.io/MtRecommender/",
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
