--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "4.17.21",
     "moment": "2.29.1",
     "node-polyfill-webpack-plugin": "1.1.4",
+    "openai": "^4.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
