--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,6 +20,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
+      - name: Use Environment Secrets
+        run: |
+        echo "REACT_APP_OPENAI_API_KEY=${{ secrets.REACT_APP_OPENAI_API_KEY }}" >> $GITHUB_ENV
+
       - name: Install dependencies
         run: npm ci
 
