--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,6 +12,10 @@ jobs:
       - name: Checkout source code.
         uses: actions/checkout@v2
 
+      - name: Access Secrets
+        run: |
+          echo "REACT_APP_OPENAI_API_KEY: ${{secrets.REACT_APP_OPENAI_API_KEY}}"
+
       - name: Use Environment Secrets
         run: echo "$SECRETS_CONTEXT"
         env: REACT_APP_OPENAI_API_KEY: ${{ secrets.REACT_APP_OPENAI_API_KEY }}
@@ -29,12 +33,9 @@ jobs:
 
       - name: Build
         run: npm run build
-        env:
-          REACT_APP_OPENAI_API_KEY: ${{ secrets.REACT_APP_OPENAI_API_KEY }}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          REACT_APP_OPENAI_API_KEY: ${{ secrets.REACT_APP_OPENAI_API_KEY }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
