--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "13.5.0",
     "axios": "0.26.1",
     "create-app-react": "1.0.6",
+    "crypto-js": "^4.1.1",
     "date-fns": "2.28.0",
     "dot-env": "0.0.1",
     "env": "0.0.2",
@@ -60,6 +61,7 @@
   },
   "homepage": "https://songtak.github.io/saju-with-chatgpt/",
   "devDependencies": {
+    "@types/crypto-js": "^4.1.2",
     "@types/lodash": "^4.14.199",
     "gh-pages": "^6.0.0"
   }
