--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "openai": "^4.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.0",
     "web-vitals": "2.1.4",
     "xml-js": "1.6.11"
